--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -309,7 +309,19 @@ column-header {
     border-radius: 0;
 }
 
-.toolbar .button {
+GtkToolbar .button {
+    border-style: none;
+    border-width: 0;
+
+    background-image: -gtk-gradient (linear,
+				     left top, left bottom,
+				     from (alpha (shade (@bg_color, 0.75), 0.0)),
+				     color-stop (0.3, alpha (shade (@bg_color, 0.9), 0.0)),
+				     color-stop (0.6, alpha (shade (@bg_color, 0.9), 0.0)),
+				     to (alpha (shade (@bg_color, 0.85), 0.0)));
+}
+
+GtkToolbar .button:hover {
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
 				     from (shade (@bg_color, 0.75)),
