--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -261,23 +261,42 @@ GtkStatusbar {
 
 .menubar *:prelight {
     background-image: none;
-    background-color: @selected_bg_color;
-    color: @selected_fg_color;
+    background-color: shade (@bg_color, 1.12);
+    border-style: solid;
+    border-width: 1;
+    /* border-radius: 4; */
+    border-color: shade (@bg_color, 0.7);
 }
 
 .menu {
-    padding: 4 0;
-    background-color: @bg_color;
-    border-radius: 0;
-    -GtkMenu-vertical-offset: 0;
-    -GtkMenu-horizontal-offset: -1;
+    padding: 4;
+    background-color: shade (@bg_color, 1.12);
+    border-style: solid;
+    border-width: 1;
+    border-color: shade (@bg_color, 0.7);
+    border-radius: 0; /* No argb visuals by default 0, it would have been nice to have it something like 4*/
+    -GtkMenu-vertical-offset: 50; /* does this actually do something? */
+    -GtkMenu-horizontal-offset: 50; /* does this actually do something? */
     -GtkMenuItem-arrow-scaling: 0.4;
 }
 
 .menu:active,
 .menu:prelight {
-    background-color: @selected_bg_color;
+    background-image: -gtk-gradient (linear,
+				     left top,
+				     left bottom,
+				     from (shade (@selected_bg_color, 1.3)),
+				     color-stop (0.05, shade (@selected_bg_color, 0.95)),
+				     color-stop (0.4, @selected_bg_color),
+				     to @selected_bg_color);
+    /* background-color: @selected_bg_color; */
     color: @selected_fg_color;
+    border-style: solid;
+    border-width: 1;
+    border-radius: 0;
+    border-color: darker (@selected_bg_color);
+    margin: -1; /* the border of the selected entry should be on top of the 
+                border of the menu iteselft, but negative margines don't work */
 }
 
 .check,
