--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -149,10 +149,24 @@ GtkCalendar,
 GtkScale {
     padding: 2;
 }
-  GtkFrame { /* I hate boxes */
-    border: none;
+  .frame { /* FIXME:
+    I would like to have no border around the widget group 'frame'
+    Instead the label on the freame should be left aligned, bold weight and slightly lighter than normal fg
+    
+    */
+    border-style: none;
+    border-width: 0;
   }
+    .frame .header { /* not at all working */
+      color: red;
+    }  
 
+/* ??? 
+    .frame GtlLabel.header {
+        color: lighter (@fg_color);
+        font-weight: bold;
+    }
+*/
   .cell {
       background-color: @base_color;
       color: @text_color;
@@ -276,36 +290,44 @@ GtkStatusbar {
     border-color: shade (@bg_color, 0.7);
 }
 
-.menu {
-    padding: 4;
-    background-color: shade (@bg_color, 1.12);
-    border-style: solid;
-    border-width: 1;
-    border-color: shade (@bg_color, 0.7);
-    border-radius: 0; /* No argb visuals by default 0, it would have been nice to have it something like 4*/
-    -GtkMenu-vertical-offset: 50; /* does this actually do something? */
-    -GtkMenu-horizontal-offset: 50; /* does this actually do something? */
-    -GtkMenuItem-arrow-scaling: 0.4;
-}
+  .menu {
+      padding: 4;
+      background-color: shade (@bg_color, 1.12);
+      border-style: solid;
+      border-width: 1;
+      border-color: shade (@bg_color, 0.7);
+      border-radius: 0; /* No argb visuals by default 0, it would have been nice to have it something like 4*/
+      -GtkMenu-vertical-offset: 50; /* does this actually do something? */
+      -GtkMenu-horizontal-offset: 50; /* does this actually do something? */
+      -GtkMenuItem-arrow-scaling: 0.4;
+  }
 
-.menu:active,
-.menu:prelight {
-    background-image: -gtk-gradient (linear,
-				     left top,
-				     left bottom,
-				     from (shade (@selected_bg_color, 1.3)),
-				     color-stop (0.05, shade (@selected_bg_color, 0.95)),
-				     color-stop (0.4, @selected_bg_color),
-				     to @selected_bg_color);
-    /* background-color: @selected_bg_color; */
-    color: @selected_fg_color;
-    border-style: solid;
-    border-width: 1;
-    border-radius: 0;
-    border-color: darker (@selected_bg_color);
-    margin: -1; /* the border of the selected entry should be on top of the 
-                border of the menu iteselft, but negative margines don't work */
-}
+    .menu:active,
+    .menu:prelight {
+        background-image: -gtk-gradient (linear,
+				         left top,
+				         left bottom,
+				         from (shade (@selected_bg_color, 1.3)),
+				         color-stop (0.05, shade (@selected_bg_color, 0.95)),
+				         color-stop (0.4, @selected_bg_color),
+				         to @selected_bg_color);
+        /* background-color: @selected_bg_color; */
+        color: @selected_fg_color;
+        border-style: solid;
+        border-width: 1;
+        border-radius: 0;
+        border-color: darker (@selected_bg_color);
+        margin: -1; /* the border of the selected entry should be on top of the 
+                    border of the menu iteselft, but negative margines don't work */
+    }
+
+    .menu.separator {
+      padding: 1 0;
+      -GtkSeparatorMenuItem-horizontal-padding: 0;
+      -GtkWidget-wide-separators: 1;
+      -GtkWidget-separator-width: 1;
+      -GtkWidget-separator-height: 7;
+    }
 
 .check,
 .radio,
@@ -328,26 +350,8 @@ GtkRadioButton:selected {
     background-color: shade (@bg_color, 1.1);
 }
 
-.menu.separator {
-    padding: 1 0;
-    -GtkSeparatorMenuItem-horizontal-padding: 0;
-    -GtkWidget-wide-separators: 1;
-    -GtkWidget-separator-width: 1;
-    -GtkWidget-separator-height: 7;
-}
 
-.toolbar.separator {
-    padding: 1 0;
-    background-color: shade (@bg_color, 0.8);
-    -GtkVSeparator-vertical-padding: 0;
-    -GtkWidget-wide-separators: 1;
-    -GtkWidget-separator-width: 7;
-    -GtkWidget-separator-height: 1;
-}
 
-.frame GtlLabel.header {
-    color: lighter (@fg_color);
-}
 
 .progressbar {
     padding: 0;
@@ -363,6 +367,8 @@ column-header {
     background-color: @tooltip_bg_color;
     color: @tooltip_fg_color;
 }
+
+/* Toolbars */
 
 .toolbar {
     background-image: -gtk-gradient (linear,
@@ -383,43 +389,51 @@ column-header {
     border-width: 0;
 }
 
-GtkToolbar .button {
-    border-style: none;
-    border-width: 0;
+  GtkToolbar .button {
+      border-style: none;
+      border-width: 0;
 
-    background-image: -gtk-gradient (linear,
-				     left top, left bottom,
-				     from (alpha (shade (@bg_color, 0.75), 0.0)),
-				     color-stop (0.3, alpha (shade (@bg_color, 0.9), 0.0)),
-				     color-stop (0.6, alpha (shade (@bg_color, 0.9), 0.0)),
-				     to (alpha (shade (@bg_color, 0.85), 0.0)));
-    -GtkWidget-focus-line-width: 0;
-}
+      background-image: -gtk-gradient (linear,
+				       left top, left bottom,
+				       from (alpha (shade (@bg_color, 0.75), 0.0)),
+				       color-stop (0.3, alpha (shade (@bg_color, 0.9), 0.0)),
+				       color-stop (0.6, alpha (shade (@bg_color, 0.9), 0.0)),
+				       to (alpha (shade (@bg_color, 0.85), 0.0)));
+      -GtkWidget-focus-line-width: 0;
+  }
 
-/* GtkToolbar .button:focused {
-    background-color: red;
-} this pseudo-class doesn't work */ 
+  /* GtkToolbar .button:focused {
+      background-color: red;
+  } this pseudo-class doesn't work */ 
 
-GtkToolbar .button:hover { /* needs correct colors */
-    background-image: -gtk-gradient (linear,
-				     left top, left bottom,
-				     from (shade (@bg_color, 0.75)),
-				     color-stop (0.3, shade (@bg_color, 0.9)),
-				     color-stop (0.6, shade (@bg_color, 0.9)),
-				     to (shade (@bg_color, 0.85)));
-}
+  GtkToolbar .button:hover { /* needs correct colors */
+      background-image: -gtk-gradient (linear,
+				       left top, left bottom,
+				       from (shade (@bg_color, 0.75)),
+				       color-stop (0.3, shade (@bg_color, 0.9)),
+				       color-stop (0.6, shade (@bg_color, 0.9)),
+				       to (shade (@bg_color, 0.85)));
+  }
 
-GtkToolbar .button:active, GtkToolbar .button:active:prelight { /* needs correct colors */
-    border-style: none;
-    border-width: 0;
-    background-image: -gtk-gradient (linear,
-				     left top, left bottom,
-				     from (shade (@bg_color, 0.75)),
-				     color-stop (0.3, shade (@bg_color, 0.9)),
-				     color-stop (0.6, shade (@bg_color, 0.9)),
-				     to (shade (@bg_color, 0.85)));
-}
+  GtkToolbar .button:active, GtkToolbar .button:active:prelight { /* needs correct colors */
+      border-style: none;
+      border-width: 0;
+      background-image: -gtk-gradient (linear,
+				       left top, left bottom,
+				       from (shade (@bg_color, 0.75)),
+				       color-stop (0.3, shade (@bg_color, 0.9)),
+				       color-stop (0.6, shade (@bg_color, 0.9)),
+				       to (shade (@bg_color, 0.85)));
+  }
 
+  .toolbar.separator {
+      padding: 1 0;
+      background-color: shade (@bg_color, 0.8);
+      -GtkVSeparator-vertical-padding: 0;
+      -GtkWidget-wide-separators: 1;
+      -GtkWidget-separator-width: 7;
+      -GtkWidget-separator-height: 1;
+  }
 
 GtkSeparator {
     -GtkSeparator-shadow-type: none;
