Ensure entries in toolbars don't inherit background-image

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -123,6 +123,7 @@
 /* Text Entries */
 .entry {
     background-color: #fff;
+    background-image: none;
     border-color: #579eea;
     border-radius: 3;
     border-width: 1;
